--- a/src/main/res/menu/file_detail_sharing_link_menu.xml
+++ b/src/main/res/menu/file_detail_sharing_link_menu.xml
@@ -38,5 +38,10 @@
         android:showAsAction="never"
         android:title="@string/share_expiration_date_label"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_share_send_link"
+        android:showAsAction="never"
+        android:title="@string/share_via_link_send_link_label"
+        app:showAsAction="never" />
 
 </menu>
